category button only

--- a/index.html
+++ b/index.html
@@ -3,9 +3,53 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Peddy||Home</title>
+
+    <link href="https://cdn.jsdelivr.net/npm/daisyui@4.12.14/dist/full.min.css" rel="stylesheet" type="text/css" />
+    <script src="https://cdn.tailwindcss.com"></script>
+
 </head>
 <body>
-    
+    <header class="px-[40px] sm:px-[80px] lg:px-[140px]">
+        <nav class="flex flex-col gap-2 items-center py-7 md:py-14 lg:py-14 lg:flex-row md:flex-row lg:justify-between sm:justify-between lg:align-middle md:align-middle">
+            <div class=" flex gap-2 justify-center items-center">
+                <img class="w-6 h-6" src="/images/logo.webp" alt="404">
+                <h1 class="text-2xl font-bold">Peddy</h1>
+            </div>
+            <div class="flex gap-8">
+                <a href="#">Home</a>
+                <a href="#">Shop</a>
+                <a href="#">Contact</a>
+            </div>
+            <div>
+                <img class="w-14" src="https://img.icons8.com/?size=100&id=H101gtpJBVoh&format=png&color=000000" alt="">
+            </div>
+        </nav>
+        <div class=" flex flex-col gap-12 lg:px-[200px] md:px-[150px] ">
+            <div class="flex flex-col justify-center items-center text-center gap-6">
+                <p class="text-xl text-gray-500 font-bold">Bringing Families Together ❤️‍🔥 </p>
+                <p class="text-5xl font-bold">Your Path to Adoption<br>Starts Here</p>
+                <p>Adopting a pet offers companionship and emotional support, helping to reduce stress and loneliness. It also gives animals a second chance at a loving home, contributing to their well-being while enhancing the adopter's sense of responsibility and fulfillment. Additionally, pets encourage an active lifestyle through walks, play, and exercise.</p>
+                <button class="px-8 py-4 bg-[#0E7A81] text-white font-bold rounded-xl">View More</button>
+            </div>
+            <div>
+                <img src="/images/pet.webp" alt="404">
+            </div>
+        </div>
+    </header>
+    <main class="px-[40px] pt-[100px] sm:px-[80px] lg:px-[140px]">
+        <div>
+            <div class="text-center">
+                <p class="pb-6 text-3xl font-bold">Adopt  Your  Best Friend</p>
+                <p class="text-gray-600 px-20 pb-12">Adopting your best friend means welcoming unconditional love and loyalty into your life.</p>
+            </div>
+            <div id="btn-container" class="gap-2 flex flex-col md:flex-row lg:flex-row  md:justify-between lg:justify-between">
+                <!-- btn  -->
+            </div>
+        </div>
+    </main>
+    <footer></footer>
+
+    <script src="js/call.js"></script>
 </body>
 </html>
