--- a/index.html
+++ b/index.html
@@ -43,11 +43,65 @@
                 <p class="pb-6 text-3xl font-bold">Adopt  Your  Best Friend</p>
                 <p class="text-gray-600 px-20 pb-12">Adopting your best friend means welcoming unconditional love and loyalty into your life.</p>
             </div>
-            <div id="btn-container" class="gap-2 flex flex-col md:flex-row lg:flex-row  md:justify-between lg:justify-between">
+            <div id="btn-container" class="gap-2 grid grid-cols-1 place-items-center md:grid-cols-2 lg:grid-cols-4  ">
                 <!-- btn  -->
             </div>
         </div>
+        <div class="py-8 flex justify-between items-center">
+            <p class="text-xl font-bold">Best Deal For you</p>
+            <button class="px-8 py-3 bg-[#0E7A81] text-white font-bold rounded-xl">Sort by Price</button>
+        </div>
+        <div class="flex gap-6 flex-col lg:flex-row md:flex-row">
+            <div id="card-container" class="w-3/4 grid grid-cols-1 gap-4 md:grid-cols-2 lg:grid-cols-3">
+                <!-- cards -->
+            </div>
+
+            <!-- 
+             class="border p-2 w-1/4 border-gray-300 rounded-lg grid grid-cols-2 items-start gap-3 grid-auto-rows-[200px]"
+            -->
+            <div id="linked-container" class="border p-2  w-1/4 border-gray-300 rounded-lg grid grid-cols-2 items-start gap-3  grid-auto-rows-[200px] " >
+                <!-- liked -->
+            </div>
+        </div>
     </main>
+    <div>
+        <!-- You can open the modal using ID.showModal() method -->
+        <button id="showTheModal" class="btn hidden" onclick="my_modal_4.showModal()">open modal</button>
+        <dialog id="my_modal_4" class="modal">
+            <div class="modal-box w-11/12 max-w-5xl">
+                <div id="modalContainer">
+
+                </div>
+                <div class="modal-action">
+                    <form method="dialog">
+                    <!-- if there is a button, it will close the modal -->
+                    <button class="btn">Close</button>
+                    </form>
+                </div>
+            </div>
+        </dialog>
+    </div>
+    <div>
+        <!-- Open the modal using ID.showModal() method -->
+        <button id="modelPoenerButton" class="btn hidden" onclick="my_modal_1.showModal()">open modal</button>
+        <dialog id="my_modal_1" class="modal">
+        <div class="modal-box ">
+            <div class="flex flex-col justify-center items-center">
+                <img src="https://img.icons8.com/?size=100&id=32749&format=png&color=000000" alt="">
+                <p class="text-3xl font-bold">Congratulations</p>
+                <span class="countdown font-mono text-6xl">
+                    <span id="counter" style="--value:${counter};"></span>
+                  </span>
+            </div>
+            <div class="modal-action">
+            <form method="dialog">
+                <!-- if there is a button in form, it will close the modal -->
+                <button id="closeBtn" class="btn hidden">Close</button>
+            </form>
+            </div>
+        </div>
+        </dialog>
+    </div>
     <footer></footer>
 
     <script src="js/call.js"></script>
