--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <p class="text-xl font-bold">Best Deal For you</p>
             <button onclick="sortedFetch()" class="px-8 py-3 bg-[#0E7A81] text-white font-bold rounded-xl border border-gray-500 hover:bg-white hover:text-[#0E7A81] transition ">Sort by Price</button>
         </div>
-        <div class="flex gap-6 flex-col lg:flex-row md:flex-row">
+        <div class="flex gap-6 flex-col lg:flex-row md:flex-row items-start">
             <div id="card-container" class="w-3/4 grid grid-cols-1 gap-4 md:grid-cols-2 lg:grid-cols-3">
                 <!-- cards -->
             </div>
@@ -63,7 +63,7 @@
             <!-- 
              class="border p-2 w-1/4 border-gray-300 rounded-lg grid grid-cols-2 items-start gap-3 grid-auto-rows-[200px]"
             -->
-            <div id="linked-container" class="border p-2  w-1/4 border-gray-300 rounded-lg grid grid-cols-2 items-start gap-3  grid-auto-rows-[200px] " >
+            <div id="linked-container" class="min-h-80 border p-2  w-1/4 border-gray-300 rounded-lg grid grid-cols-2 items-start gap-3  grid-auto-rows-[200px] " >
                 <!-- liked -->
             </div>
         </div>
@@ -106,7 +106,50 @@
         </div>
         </dialog>
     </div>
-    <footer></footer>
+    <footer class="px-[40px] sm:px-[80px] lg:px-[140px] mt-20 pb-10 bg-black">
+        <div class="flex  w-full justify-between pt-10 text-gray-300">
+            <div>
+                <div class=" flex gap-2 justify-start items-center pb-10 ">
+                    <img class="w-6 h-6" src="/images/logo.webp" alt="404">
+                    <h1 class="text-2xl text-white font-bold">Peddy</h1>
+                </div>
+                <div class="pb-4">
+                    <p>Location: av. Washington 165, NY CA 54003</p>
+                    <p>Phone: 017757575757</p>
+                    <p>Email: imtiajsultan1@gmail.com</p>
+                    <p>Openings hours: 9.00 AM - 5.00 PM</p>
+                </div>
+                <div class="flex justify-between">
+                    <img class="w-8 h-8" src="https://img.icons8.com/?size=100&id=118497&format=png&color=000000" alt="">
+                    <img class="w-8 h-8" src="images/twiter.png" alt="">
+                    <img class="w-8 h-8" src="https://img.icons8.com/?size=100&id=19318&format=png&color=000000" alt="">
+                    <img class="w-8 h-8" src="https://img.icons8.com/?size=100&id=Xy10Jcu1L2Su&format=png&color=000000" alt="">
+                    
+                </div>
+            </div>
+            <div>
+                <div>
+                    <p class="text-xl font-bold pb-10">Useful Links</p>
+                </div>
+                <div>
+                    <p>Home </p>
+                    <p>About Us</p>
+                    <p>Animals</p>
+                    <p>Foundation</p>
+                    <p>Contacts</p>
+                </div>
+            </div>
+            <div>
+                <div class="text-xl font-bold pb-10">
+                    <p>Useful Links</p>
+                </div>
+                <div>
+                    <input class="block mb-3 rounded-lg bg-gray-700 h-10 p-2" type="text" placeholder="Enter your email">
+                    <button class="h-10 p-2 block rounded-lg bg-[#0E7A81] w-full">Subscribe</button>
+                </div>
+            </div>
+        </div>
+    </footer>
 
     <script src="js/call.js"></script>
 </body>
