Error solving foother responsiveness,image loading

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header class="px-[40px] sm:px-[80px] lg:px-[140px]">
         <nav class="flex flex-col gap-2 items-center py-7 md:py-14 lg:py-14 lg:flex-row md:flex-row lg:justify-between sm:justify-between lg:align-middle md:align-middle">
             <div class=" flex gap-2 justify-center items-center">
-                <img class="w-6 h-6" src="/images/logo.webp" alt="404">
+                <img class="w-6 h-6" src="images/logo.webp" alt="404">
                 <h1 class="text-2xl font-bold">Peddy</h1>
             </div>
             <div class="flex gap-8">
@@ -33,7 +33,7 @@
                 <button onclick="scrollToSection()" class="px-8 py-4 bg-[#0E7A81] text-white font-bold rounded-xl border border-gray-500 hover:bg-white hover:text-[#0E7A81] transition">View More</button>
             </div>
             <div>
-                <img src="/images/pet.webp" alt="404">
+                <img src="images/pet.webp" alt="404">
             </div>
         </div>
     </header>
@@ -107,10 +107,10 @@
         </dialog>
     </div>
     <footer class="px-[40px] sm:px-[80px] lg:px-[140px] mt-20 pb-10 bg-black">
-        <div class="flex  w-full justify-between pt-10 text-gray-300">
+        <div class="flex  w-full flex-col md:flex-row lg:flex-row gap-8 justify-between  pt-10 text-gray-300">
             <div>
                 <div class=" flex gap-2 justify-start items-center pb-10 ">
-                    <img class="w-6 h-6" src="/images/logo.webp" alt="404">
+                    <img class="w-6 h-6" src="images/logo.webp" alt="404">
                     <h1 class="text-2xl text-white font-bold">Peddy</h1>
                 </div>
                 <div class="pb-4">
@@ -144,7 +144,7 @@
                     <p>Useful Links</p>
                 </div>
                 <div>
-                    <input class="block mb-3 rounded-lg bg-gray-700 h-10 p-2" type="text" placeholder="Enter your email">
+                    <input class="block mb-3 rounded-lg bg-gray-700 h-10 p-2 w-full" type="text" placeholder="Enter your email">
                     <button class="h-10 p-2 block rounded-lg bg-[#0E7A81] w-full">Subscribe</button>
                 </div>
             </div>
